--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./popup.css">
+    <link rel="stylesheet" href="./style/popup.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <button>Group Tabs</button>
     <ul></ul>
 
-    <script src="./popup.js" type="module"></script>
+    <script src="./src/popup.js" type="module"></script>
 </body>
 
 </html>
