added background and messages

--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+
+    <button class="start-button">Lancer le Diapo</button>
     <template id="li_template">
         <li>
             <a href="">
