Open Urls and group them

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,6 @@
 
 <body>
 
-    <button class="start-button">Lancer le Diapo</button>
     <template id="li_template">
         <li>
             <a href="">
@@ -19,9 +18,10 @@
         </li>
     </template>
 
-    <h1>Google Dev Docs</h1>
-    <button>Group Tabs</button>
-    <ul></ul>
+    <h1>Onglets D'analyse</h1>
+    <ul class="urls-list"></ul>
+    <button class="start-button">Ouvrir Les onglets</button>
+    <!-- <button class="status-button">Debug get status</button> -->
 
     <script src="./src/popup.js" type="module"></script>
 </body>
